Font-weight correct on iOS

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -20,6 +20,7 @@ $h4-font-size: $font-size-base * 1.25;
 $h5-font-size: $font-size-base;
 
 $headings-font-family: $font-family-serif;
+$headings-font-weight: 700;
 $headings-line-height: 1;
 
 
